nicer heap usage