@@ -23,12 +23,7 @@ object Launcher {
 
     // release as much memory back to the OS as possible to keep our overhead low
     // https://stackoverflow.com/questions/30458195
-    val javaVersion = sys.props("java.version").stripPrefix("1.").takeWhile(_.isDigit).toInt
-    val javaFlags = if (javaVersion >= 13) {
-      List("-XX:+UseZGC")
-    } else if (javaVersion >= 9) {
-      List("-XX:-ShrinkHeapInSteps")
-    } else Nil
+    val javaFlags = List("-XX:-ShrinkHeapInSteps", "-XX:MinHeapFreeRatio=20", "-XX:MaxHeapFreeRatio=40")
 
     // could capture envvars behind an allow-list
     var templ = getResourceAsString("ensime/launcher.sh")
